解决注册中心不能发现服务的问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=eureka-server
 #为了与后续要进行注册的服务区分，这里将服务注册中心的端口通过server.port属性设置为1001
 server.port=1001
-eureka.instance.hostname=
+eureka.instance.hostname=localhost
+
 # # 服务注册中心也会将自己作为客户端来尝试注册自己,为true（默认）时自动生效
 eureka.client.register-with-eureka= false
 # 检索服务选项，当设置为True(默认值)时，
